PR middle-end/97956 - ICE due to type mismatch in pointer_plus_expr during memchr folding

gcc/ChangeLog:

	PR middle-end/97956
	* gimple-fold.c (gimple_fold_builtin_memchr): Use sizetype for pointer
	offsets.

gcc/testsuite/ChangeLog:

	PR middle-end/97956
	* gcc.dg/memchr-3.c: New test.